SecurActive is now called PerformanceVision

--- a/resume.tex
+++ b/resume.tex
@@ -119,7 +119,7 @@
 
 \Job
   {Research and development engineer}
-  {SecurActive, Paris, France}
+  {PerformanceVision, Paris, France}
   {December 2014 – Present}
   {}
   {
