no need to specify default hyperlink colors

--- a/environment/resume/document.tex
+++ b/environment/resume/document.tex
@@ -13,8 +13,8 @@
   \setupinteraction[ % http://wiki.contextgarden.net/Interaction
     state=start,
     style=, % no default bold
-    color=black, % destination is not on the same page
-    contrastcolor=black, % destination is on the same page
+    color=, % destination is not on the same page
+    contrastcolor=, % destination is on the same page
     title={\name's resume},
     author={\name},
   ]
