slight color shades

--- a/environment/resume.tex
+++ b/environment/resume.tex
@@ -1,7 +1,8 @@
 \startenvironment[resume]
 
-  \environment[environment/resume/contact.tex]
-  \environment[environment/resume/document.tex] % uses previously defined macros
+  \environment[environment/resume/colors.tex] % defines some colors
+  \environment[environment/resume/contact.tex] % defines some macros
+  \environment[environment/resume/document.tex]
   \environment[environment/resume/experience.tex]
 
 \stopenvironment
