--- a/environment/resume/contact.tex
+++ b/environment/resume/contact.tex
@@ -8,6 +8,7 @@
   \definehead[contact][title]
   \setuphead[contact][
     after=\nowhitespace, % no space after title
+    color=bluegrey1,
   ]
 
   \defineitemgroup[contactinfos]
