--- a/environment/resume/document.tex
+++ b/environment/resume/document.tex
@@ -10,11 +10,12 @@
     backspace=30mm,
   ]
 
+  \definecolor[hyperlink][bluegrey2]
   \setupinteraction[ % http://wiki.contextgarden.net/Interaction
     state=start,
     style=, % no default bold
-    color=, % destination is not on the same page
-    contrastcolor=, % destination is on the same page
+    color=hyperlink, % destination is not on the same page
+    contrastcolor=hyperlink, % destination is on the same page
     title={\name's resume},
     author={\name},
   ]
