updating services section

--- a/components/skills.tex
+++ b/components/skills.tex
@@ -13,14 +13,14 @@
 
   \experiencetitle{Services}
   \startexperienceactivity
-    \item Salt, Ansible, Puppet, Fabric, Clonezilla
-    \item Radius, Kerberos, OpenLDAP, Active Directory
-    \item DHCP, DNS
-    \item XEN, VMware ESXi & vCenter, LXC, VirtualBox
-    \item ZFS, AFS, NFS
-    \item PostgreSQL, MonetDB, MySQL, Redis
-    % \item Zabbix, Monit, Supervisor, Collectd, Cacti, New Relic
-    \item nginx, HAproxy, Keepalived, gunicorn
+    \item Automation (Salt, Ansible, Puppet, Fabric, Clonezilla, ...)
+    \item Authentication (RADIUS, Kerberos, OpenLDAP, Active Directory)
+    \item Infrastructure (DHCP, DNS, ...)
+    \item Virtualization (LXC, QEMU/KVM, Xen, VMware ESXi & vCenter, VirtualBox)
+    \item Storage (ZFS, AFS, NFS)
+    \item Databases (PostgreSQL, MonetDB, Redis)
+    \item Monitoring (collectd, RRDtool, Zabbix, ...)
+    \item Reliability (NGINX, HAproxy, Keepalived, Gunicorn, ...)
   \stopexperienceactivity
 
   % ----------------------------------------------------------------------------
