--- a/project/resume.tex
+++ b/project/resume.tex
@@ -5,6 +5,9 @@
     context.trace,
   ]
 
+  % some recruiters like an anonymized resume
+  \definemode[anonymous][keep]
+
   \environment[environment/resume.tex]
   \product[products/resume.tex]
 
