--- a/components/jobs.tex
+++ b/components/jobs.tex
@@ -2,37 +2,35 @@
 
   \experiencecategory{Experiences}
 
+  % ----------------------------------------------------------------------------
+
   \useURL[performancevision]
     [https://www.performancevision.com/]
     []
-    [Performance Vision]
+    [Accedian Performance Vision]
 
   \experiencetitle{Research and development engineer}
   \experiencelocality
     {\from[performancevision], Paris, France}
     {December 2014 – Present}
-  Network monitoring appliance editor
+  Network performance monitoring appliance editor
   \blank
 
   \startexperienceactivity
-    \item Planning, migration and maintenance of the appliance's operating system
-    \startexperienceactivity
-      \item reworking of the images generation processes for virtual and hardware machines
-      \item reworking of the Salt-based configuration
-    \stopexperienceactivity
-
     \item Contributions to a real-time sniffer written in C
     \startexperienceactivity
       \item protocol parsers such as DB2 DRDA, TLS, MSRPC, VXLAN, ...
+      \item data analysis
     \stopexperienceactivity
 
-
-    \item Contributions to the web interface written in Python
+    \item Planning, migration and maintenance of the appliance's operating system
     \startexperienceactivity
-      \item optimizations to the SQL output of a small EDSL created for a replacement database
+      \item reworking of the build processes for virtual and hardware machines
     \stopexperienceactivity
 
-    \item Reinforcement of the Buildbot-based test infrastructure
+    \item Contributions to the back-end written in Python
+
+    \item Reworking of the Buildbot-based test infrastructure
     \item Level 2 & 3 support
   \stopexperienceactivity
 
