--- a/components/skills.tex
+++ b/components/skills.tex
@@ -2,37 +2,24 @@
 
   \experiencecategory{Skills}
 
+  % ----------------------------------------------------------------------------
+
   \experiencetitle{Development}
   \startexperienceactivity
-    \item Python, C, Shell, SQL
+    \item Python (2 & 3), C, Shell
     \item Git
     \item Agile methodology
   \stopexperienceactivity
 
   % ----------------------------------------------------------------------------
 
-  \experiencetitle{Services}
+  \experiencetitle{System administration}
   \startexperienceactivity
-    \item Automation (Salt, Ansible, Puppet, Fabric, Clonezilla, ...)
-    \item Authentication (RADIUS, Kerberos, OpenLDAP, Active Directory)
-    \item Infrastructure (DHCP, DNS, ...)
-    \item Virtualization (LXC, QEMU/KVM, Xen, VMware ESXi & vCenter, VirtualBox)
-    \item Storage (ZFS, AFS, NFS)
-    \item Databases (PostgreSQL, MonetDB, Redis)
-    \item Monitoring (collectd, RRDtool, Zabbix, ...)
-    \item Reliability (NGINX, HAproxy, Keepalived, Gunicorn, ...)
-  \stopexperienceactivity
-
-  % ----------------------------------------------------------------------------
-
-  \experiencetitle{Operating systems, hardware and appliances}
-  \startexperienceactivity
+    \item Automation (Ansible, Salt, ...)
+    \item Infrastructure (DHCP, DNS, LDAP, RADIUS, ...)
     \item Linux (mainly Debian-based)
-    \item BSD & Solaris-based
-    \item VMware (ESXi & vCenter)
-    \item Apple (Mac OS X)
-    \item Microsoft (Windows Server 2008 & 2012)
-    \item Cisco
+    \item Network analysis
+    \item Virtualisation (LXC, QEMU/KVM, ...)
   \stopexperienceactivity
 
 \stopcomponent
