--- a/components/jobs.tex
+++ b/components/jobs.tex
@@ -12,7 +12,7 @@
   \experiencetitle{Research and development engineer}
   \experiencelocality
     {\from[performancevision], Paris, France}
-    {December 2014 – Present}
+    {December 2014 – March 2019}
   Network performance monitoring appliance editor
   \blank
 
