update contact information and date ranges
For some reason, I wrote dates as [start; end[, change that to
[start; end].

--- a/resume.tex
+++ b/resume.tex
@@ -27,7 +27,9 @@
   \edef\name{Kevin Boulain}
   \edef\location{Zürich, Switzerland}
   \edef\mobile{+33 6 95 49 89 35}
-  \edef\email{kevinboulain@gmail.com}
+  \edef\email{kevin% Some...
+              @% ...obfuscation.
+              boula.in}
 }
 
 % -- document setup ------------------------------------------------------------
@@ -113,7 +115,7 @@
   \experiencetitle{Site Reliability Engineer}
   \experiencelocality
     {\from[google], Zürich, Switzerland}
-    {April 2019 – present}
+    {April 2019 – February 2023} % 2019-04-01 / 2023-02-28
 
   DDoS protection infrastructure and \from[cloudarmor].
 
@@ -175,7 +177,7 @@
   \experiencetitle{Software Engineer}
   \experiencelocality
     {\from[performancevision], Paris, France}
-    {December 2014 – March 2019}
+    {December 2014 – March 2019} % 2014-12-01 / 2019-03-19
 
   Network performance monitoring appliance.
 
@@ -211,7 +213,7 @@
   \experiencetitle{DevOps}
   \experiencelocality
     {\from[nbs], Paris, France}
-    {June 2014 - September 2014}
+    {June 2014 - September 2014} % 2014-06-02 / 2014-09-05
 
   E-commerce managed hosting.
 
@@ -255,7 +257,7 @@
   \experiencetitle{Technical and Educational Responsible}
   \experiencelocality
     {\from[42], Paris, France}
-    {May 2013 - June 2014}
+    {May 2013 - May 2014} % 2013-05-02 / 2014-05-31
 
   IT school.
 
@@ -278,7 +280,7 @@
   \experiencetitle{System and Network Administrator}
   \experiencelocality
     {\from[ionis], Kremlin-Bicêtre, France}
-    {July 2011 – May 2013}
+    {July 2011 – April 2013} % 2011-07-01 / 2013-04-30
 
   Technology schools.
 
@@ -302,7 +304,7 @@
   \experiencetitle{Preparation for the Master's Degree}
   \experiencelocality
     {\from[epitech], Kremlin-Bicêtre, France}
-    {October 2010 – May 2014}
+    {October 2010 – March 2014} % 2010-10-04 / 2014-03-28
 
   Studies leading to a Master’s degree at the European Institute of Technology
   stopped at the end of the 4\high{th} year.
