--- a/resume.tex
+++ b/resume.tex
@@ -107,12 +107,27 @@
     []
     [Netskope / Kadiska]
 
+  \useURL[gcp]
+    [https://cloud.google.com/]
+    []
+    [GCP]
+
+  \useURL[gke]
+    [https://cloud.google.com/kubernetes-engine]
+    []
+    [GKE]
+
   \experiencetitle{Staff Engineer}
   \experiencelocality
     {\from[kadiska], Remote, France}
-    {November 2023 – Present} % 2023-11-13
+    {November 2023 – April 2024} % 2023-11-13 / 2024-04-04
 
   Digital experience monitoring.
+
+  \startexperienceactivity
+    \item Preliminary work to migrate to \from[gcp]/\from[gke].
+    \item Contributions to the Python backend.
+  \stopexperienceactivity
 
   \startexperienceactivity
   \stopexperienceactivity
